Fix: post content justification not showing

--- a/client/src/styles/NewPost.css
+++ b/client/src/styles/NewPost.css
@@ -43,7 +43,7 @@
 }
 
 .ql-editor p {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .new-post-btns button {
